# zomboid_server

./: .gitignore  README.md  install_steam.sh  install_zomboid.sh  zomboid_as_service.sh
ModManager/: README.md  config_handler.py  main.py  mod_manager.py  pyproject.toml
ModManager/commands/: __init__.py  add_mods.py  list_mods.py
ModManager/pzModManager/: __init__.py  config_handler.py  main.py  mod_manager.py
ModManager/pzModManager/commands/: add_mods.py  base_commands.py  list_mods.py
ModManager/pzModManager/utils/: __init__.py  file_utils.py
pzUpdateManager/: guide.md  pz_monitor.conf  pz_monitor_config.md  pz_update_bash.sh  pz_update_monitor.py  rcon_test.py
