[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pzmodmanager"
version = "0.1.0"
description = "Project Zomboid Server Mod Manager"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "tabulate>=0.8.9",
    "requests>=2.25.1",
]

[project.scripts]
pzmod = "pzModManager.main:main"